--- a/actions/MailKit/src/MailKit.csproj
+++ b/actions/MailKit/src/MailKit.csproj
@@ -5,14 +5,19 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <AssemblyName>UkrGuru.WebJobs.Actions.MailKit</AssemblyName>
     <RootNamespace>UkrGuru.WebJobs.Actions.MailKit</RootNamespace>
-    <Version>3.6.3</Version>
+    <Version>3.6.5</Version>
     <Copyright>Oleksandr Viktor (UkrGuru)</Copyright>
+    <RepositoryUrl>https://github.com/UkrGuru/WebJobs/tree/main/actions/MailKit</RepositoryUrl>
+    <PackageTags>mailkit pop3 mail email net6.0</PackageTags>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <PackageIcon>ukrguru-logo.jpg</PackageIcon>
     <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryUrl>https://github.com/UkrGuru/WebJobs/tree/main/actions</RepositoryUrl>
-    <PackageTags>mailkit pop3 mail email net6.0</PackageTags>
-    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
+    <PackageProjectUrl></PackageProjectUrl>
+    <PackageReleaseNotes>Added ReceiveEmailsAction - receive emails from the mailbox in WJbFiles and WJbQueue for further processing.
+</PackageReleaseNotes>
+    <Description>UkrGuru.WebJobs.Actions.MailKit package is additional actions for UkrGuru.WebJobs. 
+Built on the basis MailKit package for receive emails from the mailbox.</Description>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -24,21 +29,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="..\..\..\LICENSE.txt">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </EmbeddedResource>
+    <None Remove="Resources\3.6.5.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="..\..\..\ukrguru-logo.jpg">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </EmbeddedResource>
+    <EmbeddedResource Include="Resources\3.6.5.0.sql" />
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </EmbeddedResource>
     <EmbeddedResource Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </EmbeddedResource>
+    <EmbeddedResource Include="..\ukrguru-logo.jpg">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </EmbeddedResource>
@@ -46,7 +53,7 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="3.3.0" />
-    <PackageReference Include="UkrGuru.WebJobs" Version="3.6.3" />
+    <PackageReference Include="UkrGuru.WebJobs" Version="3.6.5" />
   </ItemGroup>
 
 </Project>
